2008-04-29  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Faster startup time, by not running a useless
	  thread when starting.

2008-04-28  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Fix unhandled exception when parsing pipeline
	  command.

2008-04-27  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Add support for codeina/codecbuddy.

2008-04-22  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Fix crash in add_uris().
	  (launchpad #211210)

2008-04-16  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Fix just another unicode problem, this time when
	  trying to remove messy chars. Please, think of the kitten, and give me ascii back!
	  (launchpad #216119)

2008-04-15  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Fix problem with unicode filenames that keep
	  trying to crash the universe.
	  (launchpad #212730)

2008-04-05  Gautier Portet <kassoulet gmail com>

	* Release 1.0.0

2008-03-30  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Only format tags (list) when displaying, So we 
	  don't mess with tags we don't understand.
	  (launchpad #179886 thanks Shawn, Matthaeus, Brian)
	  Release 1.0-rc1

2008-03-27  Gautier Portet <kassoulet gmail com>
	* Fix typo which disabled clear list menu item
	* Fix filename_to_uri so it will play nice with
	  relative and absolute paths, thus removing annoying
	  gvfs error message at startup when output folder is
	  not set.
	* CustomFileChooser now have case-insensitive filters.

2008-03-20  Gautier Portet <kassoulet gmail com>
	* Add 3gp to the mime whitelist.

2008-03-11  Gautier Portet <kassoulet gmail com>
	* Add a clear list button on toolbar.
	(thanks mrennecke)

2008-03-02  Gautier Portet <kassoulet gmail com>
	* Add ca, en_GB, ms to the locales.
	* release 0.9.9

2008-03-02  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Fix crash and progress problems after removing